# picocalc-term

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  check_board.sh  check_links.sh  create_deps.sh  fix_logs.sh  nuttx.uf2  patch.py  py_find.py  py_find2.py  test_path.py
apps/pcaudio/: minimp3.h  pcaudio_decoder.c  pcaudio_main.c  pcaudio_player.c  pcaudio_playlist.c  pcaudio_ui.c
apps/pccsv/: pccsv_edit.c  pccsv_main.c  pccsv_parser.c  pccsv_table.c
apps/pcedit/: pcedit_buffer.c  pcedit_file.c  pcedit_main.c  pcedit_plugin.c  pcedit_render.c  pcedit_search.c  pcedit_syntax.c  pcedit_vi.c
apps/pcfiles/: pcfiles_main.c  pcfiles_ops.c
apps/pcssh/: pcssh.h  pcssh_client.c  pcssh_connections.c  pcssh_main.c  pcssh_scp.c  pcssh_sftp.c
apps/pcterm/: pcterm_local.c  pcterm_nsh.c  pcterm_serial.c
apps/pcvideo/: pcvideo_main.c  pcvideo_pcv.c  pcvideo_playback.c  pcvideo_ui.c
apps/pcweb/: pcweb_html.c  pcweb_http.c  pcweb_image.c  pcweb_main.c  pcweb_nav.c  pcweb_render.c
apps/pcwireless/: pcwireless_main.c
apps/settings/: settings_audio.c  settings_display.c  settings_keyboard.c  settings_main.c  settings_packages.c  settings_power.c  settings_storage.c  settings_system.c  settings_users.c  settings_wifi.c
boards/arm/rp23xx/picocalc-rp2350b/: Kconfig
boards/arm/rp23xx/picocalc-rp2350b/configs/full/: defconfig
boards/arm/rp23xx/picocalc-rp2350b/configs/lvgl/: defconfig
boards/arm/rp23xx/picocalc-rp2350b/configs/nsh/: defconfig
boards/arm/rp23xx/picocalc-rp2350b/include/: board.h  rp23xx_i2cdev.h  rp23xx_spidev.h
boards/arm/rp23xx/picocalc-rp2350b/scripts/: Make.defs  flash.ld  memmap_default.ld
boards/arm/rp23xx/picocalc-rp2350b/src/: Make.defs  rp23xx_aonrtc.c  rp23xx_appinit.c  rp23xx_audio.c  rp23xx_boot.c  rp23xx_bringup.c  rp23xx_clockmgr.c  rp23xx_firmware.c  rp23xx_flash_mtd.c  rp23xx_flash_mtd.h  rp23xx_keyboard.c  rp23xx_lcd.c  rp23xx_pio_sdio.c  rp23xx_psram.c  rp23xx_psram.c.bak  rp23xx_sdcard.c  rp23xx_sleep.c  rp23xx_southbridge.c
docs/: App Framework API.md  Detailed Implementation Plan.md  Implementation Status.md  PCV Format Spec.md  Package Format Spec.md  Project Plan.md  Stub Audit & Locations.md  eUX Implementation Plan.md  eUX Project Plan.md
pcterm/include/pcterm/: app.h  appstate.h  boot_splash.h  config.h  hostname.h  keys.h  launcher.h  login.h  package.h  runit.h  statusbar.h  terminal.h  user.h  vconsole.h
pcterm/src/: app_framework.c  app_state.c  app_stubs.c  audio_service.c  boot_splash.c  config.c  hostname.c  launcher.c  link_stubs.c  login.c  lv_port_disp.c  lv_port_indev.c  main.c  package_manager.c  psram_stubs.c  runit.c  setjmp_stubs.S  statusbar.c  terminal_widget.c  user.c  vconsole.c
picocalc_reference/FUZIX/: fuzix.patch  fuzix1.1.patch
picocalc_reference/MP3Player/: CMakeLists.txt  config.h  mp3_decoder_task.cpp  pico-mp3-player  pico-mp3-player.dis  pico-mp3-player.elf  pico-mp3-player.hex  pico-mp3-player.map  pico-mp3-player.uf2
picocalc_reference/MP3Player/elf2uf2/: elf2uf2
picocalc_reference/MP3Player/pioasm/: pioasm
picocalc_reference/MP3Player/stubs/: condition_variable.h  fake_fonts.cpp  ff.h  font_12x20.h  font_6x8.h  font_8x14.h  gpio_rp2040.h  i2c_rp2040.h  ili9488_drv.h  lock_base_rp2040.h  mad.h  mutex.h  pcm_audio_interface.h  pcm_pwm_rp2040_drv.h  posix_io.h  sd_spi_drv.h  spi_rp2040.h  task.h  uGUI.h  uGUI_colors.h  uart_rp2040.h
picocalc_reference/NES/: shapones.patch
picocalc_reference/PicoMite/: PicoMite.patch  PicoMite_002.patch  README.md
picocalc_reference/pico_multi_booter/: CMakeLists.txt  README.md  applink.py  boot.c
picocalc_reference/pico_multi_booter/linker_scripts/: memmap_default.ld.mp.rp2040  memmap_mp_rp2040.ld  rpi-pico.ld
picocalc_reference/pico_multi_booter/picomite/: .commit_hash  AllCommands.h  ArialNumFontPlus.h  Audio.c  Audio.h  BmpDecoder.c  CFunction.c  CMakeLists.txt  Commands.c  Commands.h  Custom.c  Custom.h  Draw.c  Draw.h  Editor.c  Editor.h  External.c  External.h  FileIO.c  FileIO.h  Fnt_10x16.h  Font_8x6.h  Functions.c  Functions.h  GPS.c  GPS.h  GUI.c  GUI.h  Hardware_Includes.h  Hom_16x24_LE.h  I2C.c  I2C.h  Include.h  Inconsola.h  Keyboard.c  MATHS.c  MATHS.h  MMBasic.c  MMBasic.h  MMBasic_Includes.h  (+67 more)
picocalc_reference/pico_multi_booter/picomite/usb_host_files/: tusb_config.h
picocalc_reference/pico_multi_booter/sd_boot/: .commit_hash  CMakeLists.txt  config.h  main.c  text_directory_ui.c
picocalc_reference/picocalc_keyboard/: battery.ino  keyboard.h  reg.h  reg.ino
rootfs/etc/: fstab  motd  passwd  profile
rootfs/etc/eux/: apps.conf  system.conf
rootfs/etc/init.d/: rcS
rootfs/etc/sv/audio/: run
rootfs/etc/sv/display/: run
rootfs/etc/sv/network/: run
rootfs/etc/sv/syslog/: run
rootfs/etc/wifi/: wpa_supplicant.conf
rootfs/usr/share/doc/eux/: welcome.txt
sdk/: README.md
sdk/template/: main.c  manifest.json
tools/: bin2uf2.py  mkrootfs.sh  patch_psram_qspi.py
tools/pcpkg-create/: README.md  pcpkg_create.py
tools/pcv-convert/: README.md  pcv_convert.py
tools/wsl/: build_nuttx.sh  clean_kconfig.sh  do_build.sh  fix_config.sh  fix_kconfig_paths.sh  fix_line_endings.sh  fix_symlinks.sh  install_picotool.sh  run_build19.sh  setup_nuttx_env.sh
